# RustProjects

./: README.md
GrepProject/: Cargo.toml  output.txt
GrepProject/src/: lib.rs  main.rs
RustyPipeViewer/: Cargo.toml  README.md  test.txt  test2.txt
RustyPipeViewer/src/: args.rs  lib.rs  main.rs  read.rs  stats.rs  write.rs
guessing_game/src/: main.rs
structs_example/: Cargo.toml
structs_example/src/: main.rs
transformer/: Cargo.toml
transformer/src/: lib.rs  main.rs  toml_dyn.rs  toml_stat.rs
